--- a/client/templates/basic/header.html
+++ b/client/templates/basic/header.html
@@ -3,7 +3,8 @@
         <div class="container">
             <div id="topMenu" class="6--dashboard--headings 7--dashboard--profile---subheadings 1--main-content-style 2--username-style 3--user-actions 4--time 5--display-names topmenubar topmenubar-1">
 
-                  <ul class="nav navbar-nav" style="margin-left: 500px;">
+                  <ul class="nav navbar-nav" style="margin-left: 420px;">
+                    <li><a id ="sidebar" href="#">SideBar</a></li>
                     <li><a href="{{pathFor 'sitesIndex'}}">Home</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">CRUDs<span class="caret"></span></a>
@@ -77,9 +78,79 @@
                 <p id="username-top" class="6--dashboard--headings 7--dashboard--profile---subheadings 1--main-content-style 2--username-style 3--user-actions 4--time 5--display-names username-topright username-topright-1"><span>@abchauh</span></p>
 
                 </div>
-
-
-
         </div><!-- /.container-fluid -->
+
+
+        <div id="iconBar" class="ui left vertical inverted labeled icon sidebar iconBar">
+            <div class="ui huge divided list">
+                <div class="item">
+
+                    <div class="ui icon input ">
+                        <input type="text" class="form-control" placeholder="Search...">
+                        <i class="search icon"></i>
+                    </div>
+                </div>
+                <div class="item">
+                    <i class="download icon"></i>
+                    <div class="content">
+                        <a class="">Downloads</a>
+                    </div>
+
+                </div>
+                <div class="item">
+                    <i class="translate icon"></i>
+                    <div class="content">
+                        <a class="">Vector Illustrations</a>
+                    </div>
+                </div>
+                <div class="item">
+                    <i class="photo icon"></i>
+                    <div class="content">
+                        <a class="">Photoshop files</a>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <i class="settings icon"></i>
+                    <div class="content">
+                        <a class="">Settings</a>
+                    </div>
+                </div>
+                <div class="item">
+                    <i class="help icon"></i>
+                    <div class="content">
+                        <a class="">Helps</a>
+                    </div>
+                </div>
+                <div class="item">
+                    <i class="file archive outline icon"></i>
+                    <div class="content">
+                        <a class="">Archives</a>
+                    </div>
+                </div>
+                <div class="item">
+                    <i class="newspaper icon"></i>
+                    <div class="content">
+                        <a class="">Articles</a>
+                    </div>
+                </div>
+                <div class="item">
+                    <i class="file image outline icon"></i>
+                    <div class="content">
+                        <a class="">Images</a>
+                    </div>
+                </div>
+                <div class="item">
+                    <i class="file video outline  icon"></i>
+                    <div class="content">
+                        <a class="">Videos</a>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+
+
     </nav>
 </template>
