--- a/client/templates/basic/header.html
+++ b/client/templates/basic/header.html
@@ -81,73 +81,147 @@
         </div><!-- /.container-fluid -->
 
 
-        <div id="iconBar" class="ui left vertical inverted labeled icon sidebar iconBar">
-            <div class="ui huge divided list">
-                <div class="item">
+         <div id="iconBar" class="ui left vertical inverted labeled icon iconBar sidebar">
+    <br>
+                <div  class="side">
+                    <div class="container">
+                        <div class="ui huge list">
+                        <div class="item">
+                            <div class="ui left icon input transparent ">
+                                <input type="text" class="form-control" placeholder="Search...">
+                                <i class="search icon"></i>
+                            </div>
+                        </div>
+                        </div>
+                        <div class="ui divider"></div>
+                    </div>
+                </div>
+<!--
+            <div id="serach" class="side">
+                <div class="container">
+                    <div class="ui huge list">
+                        <div class="item">
+                            <i class="search icon"></i>
+                            <div class="content">
+                                <a class="">Search</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="ui divider"></div>
+                </div>
+            </div>
+-->
+                <div class="side">
+                    <div class="container">
+                        <div class="ui huge list">
+                        <div class="item">
+                            <i class="download icon"></i>
+                            <div class="content">
+                                <a class="">Downloads</a>
+                            </div>
+                            </div>
+                        </div>
+                        <div class="ui divider"></div>
+                    </div>
+                </div>
+                <div class="side">
+                    <div class="container">
+                        <div class="ui huge list">
+                            <div class="item">
+                                <i class="translate icon"></i>
+                                <div class="content">
+                                    <a class="">Vector Illustrations</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="ui divider"></div>
+                    </div>
+                </div>
+                <div class="side">
+                    <div class="container">
+                        <div class="ui huge list">
+                            <div class="item">
+                                <i class="photo icon"></i>
+                                <div class="content">
+                                    <a class="">Photoshop files</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="ui divider"></div>
+                    </div>
+                </div>
 
-                    <div class="ui icon input ">
-                        <input type="text" class="form-control" placeholder="Search...">
-                        <i class="search icon"></i>
+            <div class="side">
+                <div class="container">
+                    <div class="ui huge list">
+                        <div class="item">
+                            <i class="settings icon"></i>
+                            <div class="content">
+                                <a class="">Settings</a>
+                            </div>
+                        </div>
                     </div>
+                    <div class="ui divider"></div>
                 </div>
-                <div class="item">
-                    <i class="download icon"></i>
-                    <div class="content">
-                        <a class="">Downloads</a>
-                    </div>
+            </div>
 
-                </div>
-                <div class="item">
-                    <i class="translate icon"></i>
-                    <div class="content">
-                        <a class="">Vector Illustrations</a>
+            <div class="side">
+                <div class="container">
+                    <div class="ui huge list">
+                        <div class="item">
+                            <i class="file archive outline icon"></i>
+                            <div class="content">
+                                <a class="">Archives</a>
+                            </div>
+                        </div>
                     </div>
+                    <div class="ui divider"></div>
                 </div>
-                <div class="item">
-                    <i class="photo icon"></i>
-                    <div class="content">
-                        <a class="">Photoshop files</a>
-                    </div>
-                </div>
+            </div>
 
-                <div class="item">
-                    <i class="settings icon"></i>
-                    <div class="content">
-                        <a class="">Settings</a>
-                    </div>
-                </div>
-                <div class="item">
-                    <i class="help icon"></i>
-                    <div class="content">
-                        <a class="">Helps</a>
-                    </div>
-                </div>
-                <div class="item">
-                    <i class="file archive outline icon"></i>
-                    <div class="content">
-                        <a class="">Archives</a>
-                    </div>
-                </div>
+    <div class="side">
+        <div class="container">
+            <div class="ui huge list">
                 <div class="item">
                     <i class="newspaper icon"></i>
                     <div class="content">
                         <a class="">Articles</a>
                     </div>
                 </div>
+            </div>
+            <div class="ui divider"></div>
+        </div>
+    </div>
+
+
+    <div class="side">
+        <div class="container">
+            <div class="ui huge list">
                 <div class="item">
                     <i class="file image outline icon"></i>
                     <div class="content">
                         <a class="">Images</a>
                     </div>
                 </div>
+            </div>
+            <div class="ui divider"></div>
+        </div>
+    </div>
+
+    <div class="side">
+        <div class="container">
+            <div class="ui huge list">
                 <div class="item">
                     <i class="file video outline  icon"></i>
                     <div class="content">
                         <a class="">Videos</a>
                     </div>
                 </div>
-
             </div>
+        </div>
+    </div>
+
+
 
         </div>
 
